0.6.2
 - [feature] optionally disable add-on for short movies
 - [feature] Full color support for LightStrips and Bloom Friends of hue

0.6.1
 - [feature] control dim/undim times from settings
 - [fix] crash on livingwhite lights

0.6.0
 - general improvements all around

0.5.0
 - [feature] support livingwhite lights
 - [feature] dim lights using current Hue settings
 - [add] debug logging
 - [add] nosetests

0.4.3
 - [add] - improved advanced settings

0.4.2
 - [fix] - bugfix

0.4.0
 - [add] - advanced settings