@@ -22,9 +22,14 @@
   <string id="309">Group id (0=all lights)</string>
   <string id="310">Ambilight using a group of lights is too slow (but you're welcome to try)</string>
 
-  <string id="400">Misc settings</string>
-  <string id="401">Enable initial flash</string>
-  <string id="402">Disable for short movies</string>
+  <string id="400">Settings</string>
+  <string id="413">Smooth transition</string>
+  <string id="414">Fast scene detection</string>
+  <string id="415">Brightness change</string>
+  <string id="401">Misc</string>
+  <string id="411">Enable initial flash</string>
+  <string id="412">Disable for short movies</string>
+  <string id="416">Short movie length</string>
 
   <string id="500">Advanced settings</string>
   <string id="510">Changes will be active after restarting XBMC</string>
